--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -14,6 +14,16 @@
         <br>
             <h1 class="letra1">¡Bienvenido Usuari@!</h1>
         <button type="button" class="btn btn-primary boton_menu btn-lg">MENÚ PRINCIPAL</button>    </section>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br> <br>
+        <br>
+        <br>
+        <br>
+        <a  class="letra1" href="">Cerrar sesión</a>
+
   </div>
   
   <!-- Page Content -->
