--- a/src/app/login/inicio/inicio.component.css
+++ b/src/app/login/inicio/inicio.component.css
@@ -1,9 +1,10 @@
 #login .container #login-row #login-column #login-box {
-    margin-top: 120px;
+    margin-top: 50px;
     max-width: 600px;
-    height: 400px;
-    border: 1px solid #9C9C9C;
-    background-color: #EAEAEA;
+    height: 450px;
+    border: 1px solid  #e0e8ed;
+    background-color: #e0e8ed;
+
   }
   #login .container #login-row #login-column #login-box #login-form {
     padding: 20px;
@@ -18,3 +19,12 @@
     background-color: blue;
 
   }
+
+  .iniciose{
+
+    background-color:  #18246e;
+    color: white;
+    
+    border-radius: 5px;
+    size: 10px;
+}
