--- a/src/app/animaldos/buscaranimal/buscaranimal.component.html
+++ b/src/app/animaldos/buscaranimal/buscaranimal.component.html
@@ -46,6 +46,9 @@
 
     <br>
     <label class="destacado">Numero de telefono dueño: {{duenotelefono}}</label>
+    <br>
+    <label class="destacado">Correo electronico dueño: {{duenocorreo}}</label>
+
 
     
 
