--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -13,7 +13,11 @@
         <br>
         <br>
             <h1 class="letra1">¡Bienvenido Usuari@!</h1>
-        <button type="button" class="btn btn-primary boton_menu btn-lg">MENÚ PRINCIPAL</button>    </section>
+        <button type="button" class="btn btn-primary boton_menu btn-lg">MENÚ PRINCIPAL</button>   
+
+
+
+
         <br>
         <br>
         <br>
@@ -22,7 +26,12 @@
         <br>
         <br>
         <br>
-        <a  class="letra1" href="">Cerrar sesión</a>
+
+        <button type="button" (click)="retroceder()" class="btn btn-primary boton_menu btn-lg">Cerrar sesión</button>   
+
+      </section>
+      
+        
 
   </div>
   
