--- a/src/app/animaldos/buscaranimal/buscaranimal.component.html
+++ b/src/app/animaldos/buscaranimal/buscaranimal.component.html
@@ -40,6 +40,8 @@
     <label class="destacado">Numero de microchip: {{n_microchip}} </label>
     <br>
     <label class="destacado">Especie: {{nombre_especie}} </label>
+    <br>
+    <label class="destacado">Fecha de nacimiento: {{fechanac}} </label>
 
     <br>
     <label class="destacado">Nombre del dueño: {{nombre_dueno}}</label>
